7/8/25 Update - Add/fix test cases + verify results up to 1.0 - Fix bug for all non-Monster-Room lootseeds containing fixed-count items - Add (unverified) 1.6.1-1.6.4 support - Rename a few items - Expand lootseed-retrieving code file